# Corepty

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-windows.yml
scripts/: bundle-fonts.mjs  gen-icon.mjs
src/: app.ts  connections.ts  dialog.ts  dimfix.ts  fonts.css  icons.ts  ipc.ts  main.ts  menu.ts  settings-dialog.ts  settings.ts  spec.ts  styles.css  terminal.ts  themes.ts  util.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/conpty/: NOTICE.md
src-tauri/icons/: icon.icns
src-tauri/src/: broker.rs  commands.rs  lib.rs  main.rs  store.rs
src-tauri/src/session/: elevated.rs  local.rs  mod.rs  proto.rs  ssh.rs  telnet.rs
