[package]
name = "corepty"
version = "0.2.1"
description = "CorePTY — a modern multi-terminal client (local shells, SSH, Telnet)"
authors = ["Daniel Leicht"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

# The library is what Tauri builds/links; main.rs is a thin launcher.
[lib]
name = "corepty_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros", "io-util", "net", "time"] }
# Use the `ring` crypto backend instead of the default `aws-lc-rs`, which needs
# the NASM assembler to build on Windows. `ring` ships pre-generated MSVC asm.
russh = { version = "0.54.5", default-features = false, features = ["ring", "flate2", "rsa"] }
keyring = { version = "3.6.3", features = ["windows-native"] }
toml = "1.0.7"
tauri-plugin-dialog = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
